@@ -5,6 +5,7 @@ TMW.CHANGELOG_LASTVER="6.2.6"
 TMW.CHANGELOG = [==[
 ===v8.1.3===
 * New DogTag: MaxDuration
+* Controlled icons can now be selected as a target of Meta icons and Icon Shown conditions.
 
 ====Bug Fixes====
 * Fixed an issue that would cause unintentional renaming of text layouts. 
