@@ -26,7 +26,7 @@ elseif strmatch(projectVersion, "%-%d+%-") then
 end
 
 TELLMEWHEN_VERSION_FULL = TELLMEWHEN_VERSION .. " " .. TELLMEWHEN_VERSION_MINOR
-TELLMEWHEN_VERSIONNUMBER = 81308 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL (for versioning of)
+TELLMEWHEN_VERSIONNUMBER = 81309 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL (for versioning of)
 
 TELLMEWHEN_FORCECHANGELOG = 80039 -- if the user hasn't seen the changelog until at least this version, show it to them.
 
@@ -3260,7 +3260,7 @@ function TMW:DoValidityCheck()
 			checker = TMW.GUIDToOwner[checkerIn]
 			if not checker then
 				TMW:Error("Invalid checker was passed to QueueValidityCheck: %q", checkerIn)
-				checkerName = "UNKNOWN" .. (TMW.debug and " " .. checkerIn)
+				checkerName = "UNKNOWN" .. (TMW.debug and " " .. checkerIn or "")
 			end
 		end
 		
