@@ -1,5 +1,6 @@
 ===v8.1.3===
 * New DogTag: MaxDuration
+* Controlled icons can now be selected as a target of Meta icons and Icon Shown conditions.
 
 ====Bug Fixes====
 * Fixed an issue that would cause unintentional renaming of text layouts. 
